# RickAndMortyAPI

./: .gitignore  injections.json  makefile  pyproject.toml
src/: main.py  test.py
src/app/characters/domain/clients/: i_character_client.py
src/app/characters/domain/dtos/: __init__.py  character.py  create_character.py  find_character.py  update_character.py
src/app/characters/domain/repositories/: __init__.py  i_character_repository.py  i_episode_character_repository.py
src/app/characters/domain/usecases/: find_characters_usecase.py  populate_all_characters_usecase.py
src/app/characters/entrypoint/controllers/: find_characters_controller.py  populate_all_characters_controller.py
src/app/characters/entrypoint/requests/: create_character_request.py  find_character_request.py  update_character_request.py
src/app/characters/entrypoint/routes/: character_routes.py
src/app/characters/infra/clients/: rest_api_character_client.py
src/app/characters/infra/repositories/: psycopg_character_repository.py  psycopg_episode_character_repository.py
src/app/classification_types/domain/dtos/: __init__.py  classification_type.py  create_classification_type.py  find_classification_type.py  update_classification_type.py
src/app/classification_types/domain/repositories/: __init__.py  i_classification_type_repository.py
src/framework/: dependency_injector.py  i_migration.py  migration_provider.py
src/framework/database/: load_database_connection_settings.py  psycopg_repository.py
src/migrations/: migrate.py
src/migrations/history/: create_tables.py
(+65 files in other folders)
